--- a/compose.yaml
+++ b/compose.yaml
@@ -4,16 +4,8 @@ services:
     build:
         context: .
         dockerfile: Dockerfile
-    environment:
-      - REDIS_PASSWORD=<redis-password>
-      - MYSQL_PASSWORD=<mysql-password>
+#    environment:
+#      - REDIS_PASSWORD=<redis-password>
+#      - MYSQL_PASSWORD=<mysql-password>
     ports:
       - "8080:8080"
-  coturn:
-    image: coturn/coturn:alpine
-    environment:
-      - TURN_SECRET=<static-auth-secret>
-      - TURN_REALM=<realm>
-      - TURN_PUBLIC_IP=<public-ip>
-    ports:
-      - "3478:3478/udp"
